--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:supportsRtl="true"
         android:theme="@style/Halloween">
         <activity android:name=".MainActivity"
-            android:theme="@style/Halloween">
+            android:theme="@style/Halloween"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,7 +20,8 @@
         </activity>
         <activity
             android:name=".MainScreenActivity"
-            android:label="@string/title_activity_main_screen" />
+            android:label="@string/title_activity_main_screen"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
